Misc config changes + addition of dataservice

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/liggitt/audit2rbac
+package: github.com/unclepeddy/audit2rbac
 import:
 - package: github.com/spf13/cobra
 - package: k8s.io/api
